# ScaledCar

./: .gitignore
LaunchScript/: hello_world.py  launchboot.sh  launchboot1.sh
catkin_ws/src/coreytest/: CMakeLists.txt  package.xml
corey_test/: CMakeLists.txt  package.xml
corey_test/src/: talker.cpp
fake_laser/: CMakeLists.txt  README.md  package.xml
fake_laser/launch/: fake_laser.launch
fake_laser/rviz/: fake_laser.rviz
fake_laser/src/: fake_laser_publisher.cpp
jetracer_ros/: lasertest.launch
jetracer_ros/cfg/: jetracer.cfg
jetracer_ros/config/ackman/: local_costmap_params.yaml
jetracer_ros/config/camera_calibration/: cam_640x480.yaml
jetracer_ros/launch/: csi_camera.launch  custom_tracking.launch  jetracer.launch  run_camera.launch  run_camnav.launch  run_nav.launch  run_navmap.launch  run_navmulti.launch  test.launch
jetracer_ros/maps/: mymap.pgm
jetracer_ros/rviz/: nav.rviz
jetracer_ros/scripts/: custom_tracking.py  mod2_nav.py  mod_nav.py  object_tracking.py
simenv/: CMakeLists.txt  package.xml  simenv.launch
simenv/urdf/: jetracer.urdf
simenv/worlds/: basic.world
tesla/: CMakeLists.txt  Note.txt  costmap_test.launch  obstacle_test.launch  package.xml  setup.py  simtest.launch  tesla.launch
tesla/msg/: obstacleData.msg
tesla/rviz/: costmap_test.rviz  simtest.rviz
tesla/scripts/: PixToCM.txt  cam_functions  camfunctions.py  camtest.py  obstacle_watch.py  realCameraTest.py  test.py
tesla/src/: listener.cpp  talker.cpp
tesla/srv/: obstacleData.srv
tesla/tests/: test.py
test/: test.sh.save  test_launchboot.sh
(+5 files in other folders)
