<?xml version="1.0"?>
<package>
  <name>fake_laser</name>
  <version>0.0.0</version>
  <description>The fake_laser package : Publishes fake LaserScan messages </description>
  <maintainer email="vpokala@usc.edu">Vishwa Theja Pokala</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>